--- a/Frontend-App/bullishield/pubspec.yaml
+++ b/Frontend-App/bullishield/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^1.1.0
   http: ^0.13.5
   velocity_x: ^3.6.0
+  fluttertoast: ^8.2.1
 
 dev_dependencies:
   flutter_test:
