--- a/Frontend-App/bullishield/pubspec.yaml
+++ b/Frontend-App/bullishield/pubspec.yaml
@@ -28,17 +28,17 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  image_picker: ^0.8.4+4
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.0
   http: ^0.13.5
   velocity_x: ^3.6.0
   fluttertoast: ^8.2.1
+
+
 
 dev_dependencies:
   flutter_test:
