--- a/Frontend-App/bullishield/pubspec.yaml
+++ b/Frontend-App/bullishield/pubspec.yaml
@@ -28,7 +28,6 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  dependencies:
   flutter:
     sdk: flutter
   image_picker: ^0.8.4+4
@@ -37,6 +36,11 @@ dependencies:
   http: ^0.13.5
   velocity_x: ^3.6.0
   fluttertoast: ^8.2.1
+  flutter_datetime_picker: ^1.5.1
+
+
+
+  
 
 
 
