--- a/Frontend-App/bullishield/pubspec.yaml
+++ b/Frontend-App/bullishield/pubspec.yaml
@@ -36,8 +36,9 @@ dependencies:
   http: ^0.13.5
   velocity_x: ^3.6.0
   fluttertoast: ^8.2.1
-  flutter_datetime_picker: ^1.6.0
+  # flutter_datetime_picker: ^1.6.0
   shared_preferences: ^2.0.11
+  file_picker: ^4.2.0
 
 
 
